--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,25 @@
 .animate-float-slow {
   animation: float-slow 10s ease-in-out infinite;
 }
+
+.grid-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index:-10;
+  transition: background-color 0.6s ease-in-out;
+}
+
+.light-mode {
+  background-color: white;
+}
+
+.dark-mode {
+  background-color: black;
+}
+canvas {
+  background-color: transparent;
+  pointer-events: none; /* This ensures clicks pass through */
+}
