--- a/src/components/GravitySlider.css
+++ b/src/components/GravitySlider.css
@@ -21,11 +21,11 @@
   }
   
   .slider-input::-webkit-slider-runnable-track {
-    background: gray;
+    background: rgba(128, 128, 128, 0.387);
   }
   
   .slider-input::-moz-range-track {
-    background: gray;
+    background: rgba(128, 128, 128, 0.387);
   }
   
   .slider-input::-webkit-slider-thumb {
@@ -58,8 +58,8 @@
   }
 
   .slider-input::-moz-range-thumb {
-    width: 20px;
     height: 20px;
+    width: 20px;
     background: rgb(192, 136, 179);
     border-radius: 50%;
     cursor: pointer;
